--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "attila": "github:zutrinken/attila#1.13.0",
     "bleak": "github:zutrinken/bleak#1.4.0",
     "casper": "github:jerinjacob1999/Casper",
+    "casper1":"github:jerinjacob1999/Casper",
     "ghost": "^3.13.3",
     "ghost-storage-adapter-s3": "^2.8.0",
     "ghost-storage-cloudinary": "^2.1.2",
