--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mysql": "^2.18.1",
     "pico": "github:tryghost/pico",
     "the-shell": "github:mityalebedev/The-Shell#v2.0.0",
-    "vapor": "github:sethlilly/Vapor#v1.6.0"
+    "vapor": "github:sethlilly/Vapor#v1.6.0",
+    "wwiki":"github:jerinjacob1999/wwiki"
   },
   "engines": {
     "node": "10.X"
