updateing casper 3.1 and package lock for heroku

--- a/content/themes/casper/package.json
+++ b/content/themes/casper/package.json
@@ -19,7 +19,7 @@
   ],
   "_resolved": "github:jerinjacob1999/Casper#a1607a3e9f36e7f0fa1afc4d2a7a4c9ad107b560",
   "_spec": "github:jerinjacob1999/Casper",
-  "_where": "E:\\Blog_Ghost\\ghost-on-heroku",
+  "_where": "D:\\mini_cs_projects\\ghost-on-heroku",
   "author": {
     "name": "Ghost Foundation",
     "email": "hello@ghost.org",
