--- a/content/themes/liebling/package.json
+++ b/content/themes/liebling/package.json
@@ -19,7 +19,7 @@
   ],
   "_resolved": "github:snathjr/liebling#4b9827903153b3fd1a2657957f36d67a138349b5",
   "_spec": "github:snathjr/liebling",
-  "_where": "E:\\Blog_Ghost\\ghost-on-heroku",
+  "_where": "D:\\mini_cs_projects\\ghost-on-heroku",
   "author": {
     "name": "Eduardo Gómez",
     "email": "this.eduardo@gmail.com",
